# shikshak-copilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
data/career/: career_paths.json
data/curriculum/: sample_cbse_class8_science_light.md  sample_cbse_class9_maths_topics.md  sample_icse_class7_english.json  sample_icse_class7_english.txt
data/eval/: grading_samples.json
docs/: JOURNAL.md
eval/: README.md
eval/datasets/: retrieval_eval.json
eval/results/: sample_grading.json  sample_retrieval.json
scripts/: chat_demo.py  dev.sh  eval_grading.py  eval_retrieval.py  ingest_career.py  ingest_curriculum.py  run_api.sh
src/teacher_copilot/: __init__.py  config.py
src/teacher_copilot/agents/: __init__.py  base.py  career.py  career_models.py  grading.py  grading_models.py  lesson_plan.py  lesson_plan_models.py  wellbeing.py
src/teacher_copilot/api/: __init__.py  context.py  errors.py  main.py  schemas.py  sessions.py
src/teacher_copilot/api/routers/: chat.py  grading.py  profile.py  tools.py
src/teacher_copilot/eval/: __init__.py  dataset.py  grading_metrics.py  results.py  retrieval_metrics.py
src/teacher_copilot/ingestion/: __init__.py  career.py  chunker.py  loader.py  pipeline.py
src/teacher_copilot/memory/: __init__.py  embeddings.py  profile.py  retrieval.py  vector_store.py
src/teacher_copilot/observability/: __init__.py  tracing.py
src/teacher_copilot/orchestrator/: __init__.py  graph.py  intent.py  state.py
src/teacher_copilot/providers/: __init__.py  cache.py  errors.py  gemini_client.py  groq_client.py  json_utils.py  ollama_client.py  router.py  types.py
tests/: test_api.py  test_career.py  test_config.py  test_eval.py  test_grading.py  test_ingestion.py  test_json_utils.py  test_lesson_plan.py  test_memory.py  test_orchestrator.py  test_providers.py  test_retrieval.py  test_scaffold.py  test_tracing.py  test_wellbeing.py
web/: .env.example  README.md  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx
web/src/app/(app)/: layout.tsx
web/src/app/(app)/career/: page.tsx
web/src/app/(app)/grade/: page.tsx
web/src/app/(app)/lesson-plan/: page.tsx
web/src/app/(app)/profile/: page.tsx
web/src/app/(app)/wellbeing/: page.tsx
web/src/components/brand/: logo.tsx
web/src/components/cards/: agent-output.tsx  badges.tsx  career-card.tsx  graded-result-card.tsx  lesson-plan-card.tsx  wellbeing-card.tsx
web/src/components/charts/: workload-chart.tsx
web/src/components/chat/: chat-input.tsx  chat-view.tsx  hero.tsx  message-bubble.tsx
web/src/components/grade/: image-drop.tsx  rubric-builder.tsx
web/src/components/layout/: page-header.tsx  primary-sidebar.tsx  theme-toggle.tsx  tool-shell.tsx
web/src/components/profile/: profile-editor.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  misc.tsx  tooltip.tsx
web/src/lib/: api.ts  constants.ts  providers.tsx  sse.ts  teacher.tsx  types.ts  utils.ts
