[project]
name = "teacher-copilot"
version = "0.0.0"
description = "Teacher Copilot — a multi-agent GenAI copilot for school teachers in India."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# NOTE: Only major versions are pinned (see prompt). Let the resolver pick the
# current stable minor/patch. pydantic>=2 and langgraph are the load-bearing ones.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "qdrant-client>=1.9",
    "sentence-transformers>=3.0",
    "httpx>=0.27",
    "groq>=0.11",
    "google-genai>=0.3",
    "langfuse>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/teacher_copilot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
packages = ["teacher_copilot"]
mypy_path = "src"
strict = true
plugins = ["pydantic.mypy"]

# Third-party libs without shipped type stubs. Keeps `mypy src/` clean without
# weakening our own type checking.
[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "qdrant_client.*",
    "groq.*",
    "google.genai.*",
    "langfuse.*",
    "langgraph.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
